# mangstoon_ai

./: .gitignore  CLAUDE.md  README.md  cloudbuild.yaml  generate_test.py  generate_v2.py  generate_v3_clothing.py  main.py  pyproject.toml
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  run.sh
backend/mangstoon_ai/: agent.py  gcs.py  styles.py
backend/mangstoon_ai/prompts/: system.py
backend/mangstoon_ai/tools/: character.py  image_gen.py  panel_editor.py  story_engine.py
docs/: demo-prep.md  gemini-3.md  hackathon-info.md  nano-banana-image-generation.md  prompt-design.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/edit/: route.ts
frontend/app/api/generate/: route.ts
frontend/app/components/: ChatEditor.tsx  ChatPanel.tsx  StoryInput.tsx  WebtoonViewer.tsx
mangstoon_ai/: agent.py
mangstoon_ai/.adk/: session.db
mangstoon_ai/prompts/: system.py
mangstoon_ai/tools/: __init__.py  character.py  image_gen.py  panel_editor.py  story_engine.py
pitch-deck/: MangstoonAI-Pitch.pptx
scripts/: characters.py  test_all_styles.py  test_clothing_variation.py  test_comic_v3.py  test_jisoo_face.py  test_styles_v2.py  test_styles_v4.py  test_styles_v5.py
